# VideoSoft

CameraCapture/: CMakeLists.txt  CameraCapture-sl.bat  CameraCapture.bat  CameraCapture.cpp  memo.txt
FormSyuuyaku/: FormSyuuyaku.bat  FormSyuuyaku.cpp  FormSyuuyaku.sln  FormSyuuyaku.vcxproj  FormSyuuyaku.vcxproj.filters  HandleStream.cpp  HandleStream.h  ImageUtile.cpp  ImageUtile.h  ReadMe.txt  stdafx.cpp  todo.h
